...
                                <fontDescription key="fontDescription" name="SpaceComics" family="Space Comics" pointSize="20"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="NEUES SPIEL">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GETRÄNKEUNFALL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="RIv-hM-2Dt">
                                <rect key="frame" x="5" y="194" width="365" height="60"/>
                                <constraints>
...
                                <fontDescription key="fontDescription" name="SpaceComics" family="Space Comics" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="ZURÜCK">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <fontDescription key="fontDescription" name="SpaceComics" family="Space Comics" pointSize="17"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="WEITER">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Spieler 1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2jy-CK-JNX">
                                                    <rect key="frame" x="40" y="4.6666666666666679" width="250" height="35"/>
                                                    <color key="backgroundColor" red="0.5725490196078431" green="0.19607843137254902" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
...
                                                        <constraint firstAttribute="height" constant="50" id="WPl-kt-v8x"/>
                                                    </constraints>
                                                    <state key="normal" image="plus"/>
                                                    <connections>
                                                        <action selector="addButtonClicked:" destination="gU7-zz-T3U" eventType="touchUpInside" id="JK5-Vf-98z"/>
...
                                    <constraint firstAttribute="width" constant="50" id="hFB-UN-i0q"/>
                                </constraints>
                                <state key="normal" image="changePlayMode">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AuX-Kl-33c">
                                <rect key="frame" x="243" y="60" width="50" height="50"/>
                                <state key="normal" image="addPlayers">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button" image="unmutedWhite"/>
                                <connections>
                                    <action selector="voiceButtonClicked:" destination="fJl-7a-dkl" eventType="touchUpInside" id="eCO-YC-3Cu"/>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" image="quit"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="BaI-Yf-3zY"/>
...
                                <fontDescription key="fontDescription" name="SpaceComics" family="Space Comics" pointSize="20"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="NORMAL">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
                                <fontDescription key="fontDescription" name="SpaceComics" family="Space Comics" pointSize="20"/>
                                <inset key="contentEdgeInsets" minX="0.0" minY="10" maxX="0.0" maxY="0.0"/>
                                <state key="normal" title="CHILLIG">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
...
